--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rusty-linear-algebra"
+name = "doem-math"
 version = "0.1.0"
 authors = ["Peter-Jan Gootzen <peterjan@gootzen.net>"]
 edition = "2018"
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-staticvec = "= 0.5.0"
+staticvec = "0.6.2"
 float-cmp = "0.6.0"
